created js files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
-/* #body{ min-height: 100vh;
+#body{ 
+  min-height: 100vh;
+}
 
-} */
+body{
+  background: #333;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
 .container-drink {
      position: relative;
-     width: 200px;
+     width: 300px;
      margin: 30px 20px 20px 30px;
    }
    
@@ -12,6 +17,10 @@
      display: block;
      width: 100%;
      height: auto;
+     border: 1px solid #ddd; /* Gray border */
+     border-radius: 4px;  /* Rounded border */
+     padding: 5px; /* Some padding */
+     width: 300px; /* Set a small width */
    }
    
    .overlay {
@@ -29,6 +38,8 @@
    
    .container-drink:hover .overlay {
      opacity: 1;
+
+     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
    }
    
    .text {
@@ -43,4 +54,62 @@
      text-align: center;
    }
 
+   .randomSelect{
+     transform: translateX(-350px);
+     transition: 1.5s;
+   }
+
+   .containerDetail {
+    position: absolute;
+    width: 450px;
+    left: 900px;
+    margin: 30px 20px 20px 30px;
+    
+  }
+  
+  .image2 {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+  
+  .overlay2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: lightgray;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+  }
+  
+  .containerDetail:hover .overlay2 {
+    height: 100%;
+  }
+  
+  .text2 {
+    color: black;
+    font-size: 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
+
+  .containerDetail h3{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-align: center;
+  }
+   
+
+
+
+  
   
