--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,26 @@ body{
     font-weight: 500;
     text-align: center;
   }
+
+  .letter {
+    width: 30px;
+    height: 30px;
+    border-style: solid;
+    padding: 2px;
+    float: left;
+    margin: 3px;
+  }
+
+  .letter-button-color {
+    color: black;
+    background-color: bisque;
+  }
+
+  #buttons {
+    margin-top: -50px;
+    margin-left: 150px;
+  }
+
    
 
 
