--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
 
 .container-drink {
      position: relative;
-     width: 300px;
+     width: 400px;
      margin: 30px 20px 20px 30px;
    }
    
@@ -20,7 +20,7 @@ body{
      border: 1px solid #ddd; /* Gray border */
      border-radius: 4px;  /* Rounded border */
      padding: 5px; /* Some padding */
-     width: 300px; /* Set a small width */
+     width: 400px; /* Set a small width */
    }
    
    .overlay {
@@ -33,25 +33,27 @@ body{
      width: 100%;
      opacity: 0;
      transition: .5s ease;
-     background-color:darkcyan;
+     background-color: lightgray;
    }
    
    .container-drink:hover .overlay {
-     opacity: 1;
-
+     opacity: 0.8;
      box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
    }
    
    .text {
-     color: white;
-     font-size: 20px;
-     position: absolute;
+     color:black;
+     font-size: 14px;
+     width: 100%;
+     padding-left: 20px;
+     padding-right: 10px;
+     position: relative;
      top: 50%;
      left: 50%;
      -webkit-transform: translate(-50%, -50%); /* IE 9 */
      -ms-transform: translate(-50%, -50%); /* Safari 3-8 */
      transform: translate(-50%, -50%);
-     text-align: center;
+     text-align: left;
    }
 
    .randomSelect{
@@ -87,18 +89,23 @@ body{
   
   .containerDetail:hover .overlay2 {
     height: 100%;
+    opacity: 0.8;
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
   }
   
   .text2 {
     color: black;
     font-size: 15px;
-    position: absolute;
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 10px;
+    position: relative;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    text-align: center;
+    text-align: left;
   }
 
   .containerDetail h3{
@@ -127,7 +134,32 @@ body{
     margin-left: 150px;
   }
 
-   
+  .addFavorite {
+    position: absolute;
+    top: -1%;
+    margin: 20px 0 0 360px;
+  }
+
+  .addFavorite:hover {
+    width: 70px;
+    height: 70px;
+  }
+
+  .addFavorite2 {
+    position: absolute;
+    top: -1%;
+    width: 60px;
+    height: 60px;
+    margin: 20px 0 0 320px;
+  }
+
+  .addFavorite2:hover {
+    width: 70px;
+    height: 70px;
+  }
+
+
+  
 
 
 
