--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,6 +161,19 @@ body{
     flex-wrap: wrap;
     justify-content: space-around;
   }
+
+  .cocktailImg{
+    position: absolute;
+    top: -1%;
+    width: 30px;
+    height: auto;
+    margin: 5px 0 0 5px;
+    z-index: 2;
+  }
+
+  .navbar-brand{
+    margin-left: 40px;
+  }
   
 
 
